// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches the snapshots 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 0.25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.c2:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c2:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c2:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c2.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c2.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c2.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c2.grouped:focus,
.c2.grouped:active,
.c2.grouped:hover {
  border-right-width: 1px;
}

.c2.grouped:focus + .grouped,
.c2.grouped:active + .grouped,
.c2.grouped:hover + .grouped {
  border-left-width: 0;
}

.c2:focus,
.c2:active {
  z-index: 1;
}

.c0 > summary {
  list-style: none;
}

.c0 > summary::-webkit-details-marker {
  display: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  border: 4px solid transparent;
  border-top-color: currentcolor;
  border-bottom-width: 0;
  content: '';
  display: inline-block;
  height: 0;
  vertical-align: middle;
  width: 0;
}

<details
  className="c0 c1"
  onToggle={[Function]}
  open={false}
>
  <summary
    aria-haspopup="true"
    className="c2 c1"
  >
    <div
      className="c3"
    />
  </summary>
  hi
</details>
`;

exports[`Dropdown matches the snapshots 2`] = `
.c2 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 0.25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.c2:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c2:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c2:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c2.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c2.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c2.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c2.grouped:focus,
.c2.grouped:active,
.c2.grouped:hover {
  border-right-width: 1px;
}

.c2.grouped:focus + .grouped,
.c2.grouped:active + .grouped,
.c2.grouped:hover + .grouped {
  border-left-width: 0;
}

.c2:focus,
.c2:active {
  z-index: 1;
}

.c0 > summary {
  list-style: none;
}

.c0 > summary::-webkit-details-marker {
  display: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  border: 4px solid transparent;
  border-top-color: currentcolor;
  border-bottom-width: 0;
  content: '';
  display: inline-block;
  height: 0;
  vertical-align: middle;
  width: 0;
}

<details
  className="c0 c1"
  onToggle={[Function]}
  open={false}
>
  <summary
    aria-haspopup="true"
    className="c2 c1"
  >
    hi
    <div
      className="c3"
    />
  </summary>
  hello!
</details>
`;

exports[`Dropdown.Item matches the snapshots 1`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hi
</li>
`;

exports[`Dropdown.Item matches the snapshots 2`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hello!
</li>
`;

exports[`Dropdown.Menu matches the snapshots 1`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;

exports[`Dropdown.Menu matches the snapshots 2`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;
